--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +13,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.error {
+  width: 100%;
+  text-align: center;
+  color: Red;
+}
+
+.error-number {
+  font-size: 8rem;
 }
